# test-task-secunda

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  example.env  pyproject.toml
src/: config.py  depends.py  exceptions.py  main.py
src/api/v1/endpoints/: organizations.py
src/db/: database.py  models.py  seed.py
src/migrations/: env.py
src/migrations/versions/: 5454e79b659c_fix_organ.py  56d29f987b21_fix_organ.py  880466bfc1cb_fix_organ.py  d24aca91abeb_initial.py  ef21a55d2810_fix_organ.py
src/models/: base.py
src/repositories/: activity.py  base.py  organization.py
src/schemas/: activity.py  building.py  organization.py
src/services/: organization.py
